--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@hookform/resolvers": "^3.6.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.43",
@@ -30,8 +34,12 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
     "gh-pages": "^6.1.1",
+    "globals": "^15.6.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.14.1",
     "vite": "^5.2.7"
   }
 }
