--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shelfiie.github.io/Shlefie-font-end",
+  "homepage": "https://shelfiie.github.io/",
   "name": "shelfie",
   "private": true,
   "version": "0.0.0",
