--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -32,4 +32,5 @@ jobs:
         aws-region: us-east-2
 
     - name: Deploy to S3
-      run: aws s3 sync ./dist s3://shelfie-bucket --delete
+      run: aws s3 sync ./dist s3://shelfiie-bucket --delete
+
